<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/capture"
        android:title="@string/arbeitszeit"
        android:icon="@drawable/img_add_circle"
        />

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/img_home"
        />

    <item android:id="@+id/calender"
        android:title="@string/kalender"
        android:icon="@drawable/img_calender"
        />
</menu>